--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
           skills and broaden their horizons of knowledge.</p>
       </div>
     </div>
+    <div class="stats">
+      <div class="stat-circle">
+        <strong>03+</strong>
+        <p>Years</p>
+      </div>
+      <div class="stat-circle">
+        <strong>10+</strong>
+        <p>Events</p>
+      </div>
+      <div class="stat-circle">
+        <strong>1k+</strong>
+        <p>Community Members</p>
+      </div>
+      <div class="stat-circle">
+        <strong>200+</strong>
+        <p>Attendees</p>
+      </div>
+    </div>
   </section>
 
   <section id="technologies">
@@ -130,7 +148,7 @@
         <img src="img/chevron-down-red.png" alt="">
         <p>How to reach us?</p>
       </div>
-      <p class="accordion-body accent-red">Mail us at "dsc.rknec@gmail.com"</p>
+      <p class="accordion-body accent-red">Mail us at <a href="mailto:dsc.rknec@gmail.com">dsc.rknec@gmail.com</a></p>
     </div>
   </section>
 </body>
